# ia_agents_discussion

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODING_STYLE.md  Dockerfile  OPERATIONS.md  README.md  USAGE.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: coding-style.md  index.md
docs/reference/: api.md  cli.md  configuration.md  events.md  tools.md
examples/: base-context.example.md
scripts/: gen_docs.py
src/agents_discussion/: __init__.py  audit.py  auth_copilot.py  cli.py  config.py  context_files.py  graph.py  models.py  pricing.py  project_context.py  prompt_store.py  prompts.py  report.py  runtime.py  state.py  tools.py  web.py
src/agents_discussion/prompt_templates/: data.en.yaml  data.es.yaml  default.en.yaml  default.es.yaml  errors.en.yaml  errors.es.yaml  performance.en.yaml  performance.es.yaml  security.en.yaml  security.es.yaml
src/agents_discussion/static/: index.html
src/agents_discussion/static/css/: app.css
src/agents_discussion/static/js/: app.js  hypothesis-map.js
tests/: __init__.py  test_docs_consistency.py  test_empty_final.py  test_hypotheses.py  test_message_content.py  test_moderator_parse.py  test_prompts.py  test_tool_cache.py  test_tools_ssh.py  test_truncate.py
