[project]
name = "agents-discussion"
version = "0.1.0"
description = "Multi-agent technical diagnosis debates using LangGraph and GitHub Models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "paramiko>=3.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
agents-discuss              = "agents_discussion.cli:main"
agents-discuss-web          = "agents_discussion.web:main"
agents-discuss-copilot-auth = "agents_discussion.auth_copilot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_discussion"]
