[project]
name = "agents-discussion"
dynamic = ["version"]
description = "Multi-agent technical diagnosis debates using LangGraph and GitHub Models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Luis González Fernández", email = "luisgf@luisgf.es" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.115.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typing-extensions>=4.10",
    "python-dotenv>=1.0.1",
    "paramiko>=3.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
agents-discuss              = "agents_discussion.cli:main"
agents-discuss-web          = "agents_discussion.web:main"
agents-discuss-copilot-auth = "agents_discussion.auth_copilot:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version: src/agents_discussion/__init__.py (__version__)
[tool.hatch.version]
path = "src/agents_discussion/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_discussion"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
